# podval_bot

./: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
phrases/: supportive.json  user_supportive.json
recipes/: result.json
src/: llm.py  logger.py  main.py  read_recipes.py  settings.py  texts.py  utils.py
src/database/: __init__.py  recipes.py  session_manager.py  users.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2024-03-16_7781e23eb274_add_recipes.py  a0752352a0e2_init.py
src/repository/: __init__.py  recipes.py  user.py
tests/: conftest.py
