[tool.poetry]
name = "podval-bot"
version = "0.1.0"
description = ""
authors = ["Roman Solomatin <36135455+Samoed@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["job-queue"], version = "^21.0"}
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.2"
aiohttp = "^3.9.1"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
alembic = "^1.13.0"
openai = "^1.9.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.6"


[tool.poetry.group.mypy.dependencies]
types-pytz = "^2023.3.1.1"
pandas-stubs = "^2.1.1.230928"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-recording = "^0.13.1"
pytest-cov = "^4.1.0"
pytest-httpx = "^0.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
target-version = "py310"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select= [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff
    #"D",   # pydocstyle
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F405", "F403", "D"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "scipy",
    "sklearn",
]
ignore_missing_imports = true
